<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SM17178_G03_PRACTICA2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_login_title">Práctica 1</string>
    <string name="fragment_login_description">Servicios móviles. Grado en Ingenería Telemática 2017-2018</string>
    <string name="fragment_login_user">Usuario</string>
    <string name="fragment_login_password">Contraseña</string>
    <string name="fragment_login_ip">IP</string>
    <string name="fragment_login_port">Puerto</string>
    <string name="fragment_login_button">CONECTAR</string>
    <string name="fragment_app_riego">Activar el riego</string>
    <string name="activity_button_on">ON</string>
    <string name="activity_button_OFF">OFF</string>
    <string name="welcome_name">Bienvenido a AGRAPP</string>
    <string name="welcome_button">Comenzar</string>
    <string name="Localizacion">Localizacion</string>
    <string name="PropiedadesTe">Propiedades</string>
    <string name="base_text">Pincha en la imagen para encontrar tiendas de productos agrarios</string>
    <string name="BotonLlamada">Atención al cliente</string>
    <string name="title_activity_action">Action</string>
    <string name="action_riego">Riego</string>
    <string name="action_ph">PH</string>
    <string name="action_intro_ph">introduce PH</string>
    <string name="action_humedad">Humedad</string>
    <string name="action_abono">Abono</string>
    <string name="action_temperatura">Temperatura</string>
    <string name="base_aplication_mensaje">Escribe tu problema y lo resolveremos lo antes posible</string>
    <string name="base_aplication_propiedades">Configurar y ver estado del terreno</string>
    <string name="action_enviar">Enviar datos</string>
    <string name="action_datos">Valores Actuales</string>
    <string name="ph_descripcion">Se mide de 0 a 14</string>
    <string name="humedad_descripcion">Se mide en porcentaje de 0 a 100</string>
    <string name="temperatura_descripcion">Se puede medir hasta con 1 decimal</string>
</resources>